dataset1235/2025-2/610742602/users/2070606917/executions/677928262_2819779400.log
== RUN (2025-08-28 16:09:47)
-- CODE: 
Quantidade = int(input())
# quantidade de jogos
Valor_unitario = float(input())
# valor unitario de jogo
frete = float(input())
# valor do frete

# calculo do preço total 
total = quantidade * valor_unitario + frete
# saida
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 16:11:40)
-- CODE: 
Quantidade = int(input())
# quantidade de jogos
Valor_unitario = float(input())
# valor unitário de jogo
frete = float(input())
# valor do frete

# calculo do preço total 
total = quantidade * valor_unitario + frete
# saida
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:11:42)
-- CODE: 
Quantidade = int(input())
# quantidade de jogos
Valor_unitario = float(input())
# valor unitário de jogo
frete = float(input())
# valor do frete

# calculo do preço total 
total = quantidade * valor_unitario + frete
# saida
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:17:49)
-- CODE: 
quantidade = int(input())
# quantidade de jogos
valor_unitario = float(input())
# valor unitário de jogo
frete = float(input())
# valor do frete


# calculo do preço total 
total = quantidade *8 valor_unitario + frete
# saida
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:17:06)
-- CODE: 
quantidade = int(input())
# quantidade de jogos
valor_unitario = float(input())
# valor unitário de jogo
frete = float(input())



# calculo do preço total 
total = quantidade *8 valor_unitario + frete
# saida
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 16:18:43)
-- CODE: 
quantidade = int(input())
# quantidade de jogos
valor_unitario = float(input())
# valor unitário de jogo
frete = float(input())
# valor do frete


# calculo do preço total 
total = quantidade * valor_unitario + frete
# saida
print(total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:11:38)
-- CODE: 
Quantidade = int(input())
# quantidade de jogos
Valor_unitario = float(input())
# valor unitário de jogo
frete = float(input())
# valor do frete

# calculo do preço total 
total = quantidade * valor_unitario + frete
# saida
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 16:17:51)
-- CODE: 
quantidade = int(input())
# quantidade de jogos
valor_unitario = float(input())
# valor unitário de jogo
frete = float(input())
# valor do frete


# calculo do preço total 
total = quantidade *8 valor_unitario + frete
# saida
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:18:24)
-- CODE: 
quantidade = int(input())
# quantidade de jogos
valor_unitario = float(input())
# valor unitário de jogo
frete = float(input())
# valor do frete


# calculo do preço total 
total = quantidade *8 valor_unitario + frete
# saida
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 16:12:00)
-- CODE: 
Quantidade = int(input())
# quantidade de jogos
Valor_unitario = float(input())
# valor unitário de jogo
frete = float(input())



# calculo do preço total 
total = quantidade * valor_unitario + frete
# saida
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:14:49)
-- CODE: 
Quantidade = int(input())
# quantidade de jogos
Valor_unitario = float(input())
# valor unitário de jogo
Frete = float(input())



# calculo do preço total 
Total = quantidade * valor_unitario + frete
# saida
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    Total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    Total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    Total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    Total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    Total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    Total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 16:09:51)
-- CODE: 
Quantidade = int(input())
# quantidade de jogos
Valor_unitario = float(input())
# valor unitario de jogo
frete = float(input())
# valor do frete

# calculo do preço total 
total = quantidade * valor_unitario + frete
# saida
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:18:40)
-- CODE: 
quantidade = int(input())
# quantidade de jogos
valor_unitario = float(input())
# valor unitário de jogo
frete = float(input())
# valor do frete


# calculo do preço total 
total = quantidade * valor_unitario + frete
# saida
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:18:25)
-- CODE: 
quantidade = int(input())
# quantidade de jogos
valor_unitario = float(input())
# valor unitário de jogo
frete = float(input())
# valor do frete


# calculo do preço total 
total = quantidade *8 valor_unitario + frete
# saida
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 10
    total = quantidade *8 valor_unitario + frete
                          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 16:16:14)
-- CODE: 
Quantidade = int(input())
# quantidade de jogos
Valor_unitario = float(input())
# valor unitário de jogo
Frete = float(input())



# calculo do preço total 
Total = quantidade e valor_unitario + frete
# saida
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 10
    Total = quantidade e valor_unitario + frete
                       ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 10
    Total = quantidade e valor_unitario + frete
                       ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 10
    Total = quantidade e valor_unitario + frete
                       ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 10
    Total = quantidade e valor_unitario + frete
                       ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 10
    Total = quantidade e valor_unitario + frete
                       ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 10
    Total = quantidade e valor_unitario + frete
                       ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 16:11:44)
-- CODE: 
Quantidade = int(input())
# quantidade de jogos
Valor_unitario = float(input())
# valor unitário de jogo
frete = float(input())
# valor do frete

# calculo do preço total 
total = quantidade * valor_unitario + frete
# saida
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = quantidade * valor_unitario + frete
            ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'Quantidade'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
